# telegram-utils-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  lefthook.yaml  mise.toml  pyproject.toml  renovate.json5  requirements.txt
.github/: FUNDING.yml
scripts/: sync_plugin_deps.py
src/: __init__.py  __main__.py  bot.py
src/i18n/locales/: ar_EG.json  en_US.json
src/modules/: __init__.py  admin.py  audio.py  base.py  debug.py  download_upload.py  md5.py  media.py  permissions.py  ping.py  plugin_manager.py  rename.py  restart.py  run.py  tasks_manager.py  web_search.py
src/modules/core/: admin.py  permissions.py  plugin_manager.py  tasks_manager.py
src/modules/inline/: web_search.py
src/modules/plugins/: ai.py  debug.py  direct_links.py  download_upload.py  file_manager.py  gplay.py  images.py  md5.py  media.py  pdf.py  ping.py  readability.py  rename.py  run.py  youtube.py  ytdlp.py
src/utils/: archive_org.py  command.py  cryptography.py  downloads.py  fast_telethon.py  filters.py  google_drive.py  gplay.py  i18n.py  images.py  json.py  json_processing.py  modules_loader.py  modules_registry.py  patterns.py  permission_manager.py  plugin_deps_sync.py  progress.py  quran.py  reply.py  run.py  subtitles.py  tafrigh_compat.py  telegram.py  web.py
src/utils/remote_files/: __init__.py  models.py  providers.py  resolver.py
tests/: test_cryptography_helpers.py  test_direct_links_helpers.py  test_download_upload_helpers.py  test_downloads_helpers.py  test_fast_telethon.py  test_file_manager_helpers.py  test_gplay_helpers.py  test_images_helpers.py  test_media_helpers.py  test_pdf_helpers.py  test_permissions_helpers.py  test_rename_helpers.py  test_run_helpers.py  test_run_utils.py  test_tafrigh_compat.py  test_tasks_manager.py  test_telegram_helpers.py  test_youtube_helpers.py  test_ytdlp_helpers.py
