[project]
name = "telegram-utils-bot"
version = "0.1.0"
description = "A Telegram bot that can do various things."
authors = [
    { name = "yshalsager", email = "contact@yshalsager.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "Telethon>=1.40.0",
    "cryptg>=0.5.0.post0",
    "aiohttp>=3.11.18",
    "hachoir>=3.3.0",
    "humanize>=4.12.2",
    "orjson>=3.10.16",
    "pydub>=0.25.1",
    "regex>=2024.11.6",
    "tafrigh[wit,whisper]>=1.7.6",
    "wikipedia>=1.4.0",
    "vosk==0.3.44",
    "yt-dlp[default]>=2025.03.31",
    "yt-dlp-get-pot-rustypipe>=0.1.0",
    "pymupdf>=1.25.5",
    "tahweel>=0.1.0",
    "ocrmypdf>=16.10.0",
    "plate>=1.0.1",
    "llm>=0.24.2",
    "llm-gemini>=0.18.1",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.6",
    "jurigged>=0.6.0",
]

[tool.mypy]
files = ["src"]
exclude = [
    '^fast_telethon\.py$',
]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
#plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = [
    "E501", "S307", "RET504", "S101", "D211", "D213",
    "ERA001", # Found commented-out code
    "G004", # Logging statement uses f-string
    "PLR2004", # Magic value used in comparison, consider replacing 3 with a constant variable
    "PLR0913", # Too many arguments to function call (6 > 5)
    "E712",
    "RUF001", # ambiguous-unicode-character-string	String contains ambiguous {}. Did you mean {}?
    "ISC001", # for ruff format
]
unfixable = [
    "ERA001", "F401", "F841", "T201", "T203",
    "E711", # none-comparison. SQLAlchemy does not support is None apparently.
    "E712", # true-false-comparison. SQLAlchemy does not support it, apparently.
]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*/*.py" = ["N999"]
"*/scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
