[project]
name = "telegram-utils-bot"
version = "0.1.0"
description = "A Telegram bot that can do various things."
authors = [
    { name = "yshalsager", email = "contact@yshalsager.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "telethon>=1.40.0",
    "cryptg>=0.5.1",
    "aiohttp>=3.12.15",
    "hachoir>=3.3.0",
    "humanize>=4.12.3",
    "orjson>=3.11.2",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.2", # required for pydub on 3.13
    "regex>=2025.7.34",
    "tafrigh[wit,whisper]>=1.7.6",
    "wikipedia>=1.4.0",
    "vosk==0.3.44",
    "yt-dlp[default,curl-cffi]>=2025.08.22",
    "pymupdf>=1.26.3",
    "tahweel>=0.2.0",
    "ocrmypdf>=16.10.4",
    "plate>=1.0.1",
    "llm>=0.27.1",
    "llm-gemini>=0.24",
    "llm-groq>=0.8",
    "bgutil-ytdlp-pot-provider>=1.2.2",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pre-commit>=4.3.0",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
    "jurigged>=0.6.1",
]

[tool.uv]
override-dependencies = [
    "openai-whisper @ git+https://github.com/openai/whisper#v20250625",
]

[tool.mypy]
files = ["src"]
exclude = [
    '^fast_telethon\.py$',
]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
#plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = [
    "E501", "S307", "RET504", "S101", "D211", "D213",
    "ERA001", # Found commented-out code
    "G004", # Logging statement uses f-string
    "PLR2004", # Magic value used in comparison, consider replacing 3 with a constant variable
    "PLR0913", # Too many arguments to function call (6 > 5)
    "E712",
    "RUF001", # ambiguous-unicode-character-string	String contains ambiguous {}. Did you mean {}?
    "ISC001", # for ruff format
]
unfixable = [
    "ERA001", "F401", "F841", "T201", "T203",
    "E711", # none-comparison. SQLAlchemy does not support is None apparently.
    "E712", # true-false-comparison. SQLAlchemy does not support it, apparently.
]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*/*.py" = ["N999"]
"*/scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
